--- a/.github/workflows/remote-sync.yml
+++ b/.github/workflows/remote-sync.yml
@@ -23,7 +23,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git clone https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository_owner }}/Rotessa2.git
+          git clone https://x-access-token:${GITHUB_TOKEN}@github.com/${{ secrets.REPO_OWNER }}/Rotessa2.git
           cd Rotessa2
 
       - name: Copy payments folder to remote repository
