--- a/.github/workflows/remote_sync-new.yml
+++ b/.github/workflows/remote_sync-new.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Delete old repository
         run: |
           cd ..
-          rm -rf cicd-playground2
+          rm -rf jb-cicd-playground
 
       - name: Push changes
         run: |
