--- a/.github/workflows/remote_sync-new.yml
+++ b/.github/workflows/remote_sync-new.yml
@@ -14,8 +14,8 @@ jobs:
 
       - name: Set up Git
         run: |
-          git config --global user.name '${{ secrets.ME }}'
-          git config --global user.email '${{ secrets.MY_EMAIL }}'
+          git config --global user.name 'johnathanbo'
+          git config --global user.email 'oraclemars@gmail.com'
 
       - name: Clone remote repository
         env:
