--- a/.github/workflows/remote_sync-new.yml
+++ b/.github/workflows/remote_sync-new.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
+      GITHUB_TOKEN: ${{ secrets.PAT }}
       REPO_OWNER: ${{ secrets.REPO_OWNER }}
       REPO_NAME: ${{ secrets.REPO_NAME }}
       PAT: ${{ secrets.PAT }}
@@ -32,17 +33,18 @@ jobs:
 
       - name: Clone remote repository
         run: |
-          git clone https://x-access-token:${PAT}@github.com/${REPO_OWNER}/${REPO_NAME}.git
+          git clone https://x-access-token:${GITHUB_TOKEN}@github.com/${REPO_OWNER}/${REPO_NAME}.git
 
       - name: Copy payments folder to remote repository
         run: |
-          cd ${REPO_NAME}
-          cp -r payments/* ../.
+          cp -r ${REPO_NAME}/payments/* .
 
-      - name: Delete old repository
+      - name: Remove submodule configuration
         run: |
-          cd ..
-          rm -rf ${REPO_NAME}
+          cd ${REPO_NAME}
+          git submodule deinit -f -- .
+          git rm -f .
+          rm -rf .git/modules/${REPO_NAME}
 
       - name: Commit changes
         run: |
