--- a/.github/workflows/remote_sync-new.yml
+++ b/.github/workflows/remote_sync-new.yml
@@ -42,9 +42,10 @@ jobs:
 
       - name: Remove submodule configuration
         run: |
-          cd ..
+          cd ../
           git submodule deinit -f -- ${REPO_NAME}
           git rm -rf ${REPO_NAME}
+          rm -rf .git/modules/${REPO_NAME}
 
       - name: Commit changes
         run: |
