--- a/.github/workflows/remote_sync-new.yml
+++ b/.github/workflows/remote_sync-new.yml
@@ -42,8 +42,8 @@ jobs:
 
       - name: Remove submodule configuration
         run: |
-          git submodule deinit -f -- ${REPO_NAME}
-          git rm -rf ${REPO_NAME}
+          git submodule deinit -f -- .
+          git rm -rf .
           rm -rf .git/modules/${REPO_NAME}
 
       - name: Commit changes
