--- a/.github/workflows/remote_sync-new.yml
+++ b/.github/workflows/remote_sync-new.yml
@@ -42,7 +42,8 @@ jobs:
 
       - name: Remove submodule configuration
         run: |
-          ls -a 
+          cd .git
+          ls -a
           git submodule deinit -f -- ${REPO_NAME}
           git rm -rf ${REPO_NAME}
           rm -rf .git/modules/${REPO_NAME}
