--- a/.github/workflows/remote_sync-new.yml
+++ b/.github/workflows/remote_sync-new.yml
@@ -5,6 +5,11 @@ on:
     types: [payments-sync-ready]
 permissions:
   contents: write
+env:
+  PAT: ${{ secrets.PAT }}
+  REPO_OWNER: ${{ secrets.REPO_OWNER }}
+  REPO_NAME: ${{ secrets.REPO_NAME }}
+
 jobs:
   sync:
     runs-on: ubuntu-latest
@@ -17,38 +22,35 @@ jobs:
         run: |
           git config --global user.name '${{ secrets.GIT_USERNAME }}'
           git config --global user.email '${{ secrets.GIT_EMAIL }}'
+
       - name: Set up Git credentials
-        env:
-          PAT: ${{ secrets.PAT }}
         run: |
           git config --global credential.helper 'store'
           echo "https://x-access-token:${PAT}@github.com" > ~/.git-credentials
-      - name: Clone remote repository
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
-          REPO_OWNER: ${{ secrets.REPO_OWNER }}
-          REPO_NAME: ${{ secrets.REPO_NAME }}
+
+      - name: Remove all files except .git and .github
         run: |
-          git clone https://x-access-token:${GITHUB_TOKEN}@github.com/${REPO_OWNER}/${REPO_NAME}.git
+          find . -mindepth 1 -maxdepth 1 ! -name '.git' ! -name '.github' -exec rm -rf {} +
+
+      - name: Clone remote repository
+        run: |
+          git clone https://x-access-token:${PAT}@github.com/${REPO_OWNER}/${REPO_NAME}.git
+
       - name: Copy payments folder to remote repository
-        env:
-          REPO_NAME: ${{ secrets.REPO_NAME }}
         run: |
           cd ${REPO_NAME} 
           cp -r payments/* ../.
+
       - name: Delete old repository
-        env:
-          REPO_NAME: ${{ secrets.REPO_NAME }}
         run: |
           cd ..
           rm -rf ${REPO_NAME}
+
       - name: Commit changes
         run: |
           git add .
           git commit -m "Sync payments folder from main-repo"
+
       - name: Push changes
-        env:
-          PAT: ${{ secrets.PAT }}
-          REPO_OWNER: ${{ secrets.REPO_OWNER }}
         run: |
           git push https://x-access-token:${PAT}@github.com/${REPO_OWNER}/cicd-playground2.git main
