--- a/.github/workflows/remote_sync-new.yml
+++ b/.github/workflows/remote_sync-new.yml
@@ -28,9 +28,9 @@ jobs:
           git config --global credential.helper 'store'
           echo "https://x-access-token:${PAT}@github.com" > ~/.git-credentials
 
-      - name: Remove all files except .git and .github
+      - name: Remove all files except .git, .github, and .gitignore
         run: |
-          find . -mindepth 1 -maxdepth 1 ! -name '.git' ! -name '.github' -exec rm -rf {} +
+          find . -mindepth 1 -maxdepth 1 ! -name '.git' ! -name '.github' ! -name '.gitignore' -exec rm -rf {} +
 
       - name: Clone remote repository
         run: |
