--- a/.github/workflows/Payments-Sync.yml
+++ b/.github/workflows/Payments-Sync.yml
@@ -62,4 +62,4 @@ jobs:
           commit-message: Syncing changes to main repo
           title: Automated - Payments-Repo Sync
           body: Testin
-          reviewrs: johnathanbo
+          reviewers: johnathanbo
