--- a/.github/workflows/Payments-Sync.yml
+++ b/.github/workflows/Payments-Sync.yml
@@ -2,7 +2,7 @@ name: Sync Payments Folder
 
 on:
   repository_dispatch:
-    types: [payments-sync-ready]
+    types: [payments-sync-ready1]
 permissions:
   contents: write
 jobs:
