--- a/.github/workflows/Create-PR.yml
+++ b/.github/workflows/Create-PR.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   sync-changes:
     runs-on: ubuntu-latest
+    env:
+      PAT: ${{ secrets.PAT }}
 
     steps:
       - name: Checkout main repository
@@ -17,6 +19,11 @@ jobs:
       - name: Clone remote repository
         run: |
           git clone https://x-access-token:${{ secrets.PAT }}@github.com/johnathanbo/jb-cicd-playground.git
+
+      - name: Set up Git credentials
+        run: |
+          git config --global credential.helper 'store'
+          echo "https://x-access-token:${PAT}@github.com" > ~/.git-credentials
 
       - name: Copy changes from remote repository
         run: |
