--- a/.github/workflows/Create-PR.yml
+++ b/.github/workflows/Create-PR.yml
@@ -19,8 +19,6 @@ jobs:
     steps:
       - name: Checkout main repository
         uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.PAT }}
 
       - name: Set up Git
         run: |
@@ -31,6 +29,10 @@ jobs:
         run: |
           git config --global credential.helper 'store'
           echo "https://x-access-token:${PAT}@github.com" > ~/.git-credentials
+
+      - name: Remove all files except .git, .github, and .gitignore
+        run: |
+          find . -mindepth 1 -maxdepth 1 ! -name '.git' ! -name '.github' ! -name '.gitignore' -exec rm -rf {} +
 
       - name: Clone remote repository
         run: |
