--- a/.github/workflows/Create-PR.yml
+++ b/.github/workflows/Create-PR.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Push changes to new branch
         run: |
-          git push https://x-access-token:${PAT}@github.com/johnathanbo/cicd-playground2.git sergey-staging
+          git push https://x-access-token:${PAT}@github.com/johnathanbo/cicd-playground2.git main
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
