--- a/.github/workflows/Create-PR.yml
+++ b/.github/workflows/Create-PR.yml
@@ -20,9 +20,9 @@ jobs:
     steps:
       - name: Checkout main repository
         uses: actions/checkout@v4
+      - uses: webfactory/ssh-agent@v0.9.0
         with:
-          fetch-depth: 0
-
+          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
       - name: Set up Git
         run: |
           git config --global user.name ${GIT_USERNAME}
